# HubitatWork

./: .gitignore  AGENTS.md  AI_PLAN.md  README.md  RingPersonDetectionManager.groovy
.github/: copilot-instructions.md
Apps/: PHASE4-COMPLETION.md
Docs/: Hub-Variables-Reference.md  PII.md  QUICK-START.md  Rule-Analysis.md  devices-table.md
Rules/: GroupOfRules.json  Main_new__2025-12-06~2.4.3.167~manual.lzf  Night-BHScreenOpen.txt  Night-CarPortBeam.txt  Night-IntruderLRFrenchDoors.txt  Night-RPDBirdHouse.txt  Night-RPDRearGate.txt  Night-SheShedDoorOpen.txt  Rule-Consolidation-Plan.md
mcp/push-groovy/: .env.example  pyproject.toml  server.py  test-local.py  test_app.groovy
mcp/push-groovy/docs/: README.md
mcp/push-groovy/push_groovy_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
wiki-export/: Apps-CameraPrivacyManager-CameraPrivacyManager.md  Apps-DoorWindowMonitor-DoorWindowMonitor.md  Apps-EmergencyHelpManager-EmergencyHelpManager.md  Apps-EnvironmentalControlManager-EnvironmentalControlManager.md  Apps-LightsAutomationManager-LightsAutomationManager.md  Apps-Night-NightSecurityManager-Sequence-Diagrams.md  Apps-Night-NightSecurityManager.md  Apps-Night-Plan.md  Apps-Night-Rule-Analysis.md  Apps-PHASE3-COMPLETION.md  Apps-PerimeterSecurityManager-PerimeterSecurityManager.md  Apps-RingAlarmManager-RingAlarmManager.md  Apps-RingPersonDetectionManager-RingPersonDetectionManager.md  Apps-SpecialAutomationsManager-SpecialAutomationsManager.md  Apps-WaterIsOnMonitor-WaterIsOnMonitor.md  Docs-01-Overview-Platform-Overview.md  Home.md  (+4 more)
(+70 files in other folders)
